# secure-file-transfer

./: .gitignore  LICENSE  README.md
client/: Cargo.toml
client/src/: commtypes.rs  consts.rs  fileio.rs  main.rs  session.rs
server/: Cargo.toml
server/src/: auth.rs  commtypes.rs  consts.rs  fileio.rs  main.rs  session.rs
