[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.52"
ring = "0.16.20"
rand = "0.8.5"
serde_json = "1.0.96"
serde = { version = "1.0.153", features = ["derive"] }
